--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <style>
       span {
         color: blue;
@@ -37,20 +41,25 @@
         margin-left: 20px;
         border: 2px solid blue;
       }
-      .fot-banner{
+      .fot-banner {
         width: 400px;
         height: 450px;
-      
       }
-      .button1{
+      .button1 {
         width: 180px;
         height: 50px;
+      }
+      .icon {
+        gap: 10px;
+      }
+      h2 {
+        font-size: 40px;
       }
     </style>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-transparent">
       <div class="container">
         <button
           class="navbar-toggler"
@@ -209,16 +218,217 @@
               yang dapat bersaing di dunia internasional
             </p>
             <div class="tombol d-flex">
-              <button type="button" class="button1 btn btn-primary rounded-5 mt-5">
+              <button
+                type="button"
+                class="button1 btn btn-primary rounded-5 mt-5"
+              >
                 Get Started
               </button>
               <button class="button2 mt-5 rounded-5 text-center">vidio</button>
             </div>
-            <p class="mt-5">We are in Socials Media :</p>
+            <div class="icon d-flex mt-5">
+              <p class="me-4">We are in Socials Media :</p>
+              <i class="bi bi-facebook"></i>
+              <i class="bi bi-twitter"></i>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-youtube"></i>
+            </div>
           </div>
           <div class="col-md-4">
             <div class="fot-banner">
-                <img src="Rectangle 3.png" alt="" class="w-100" >
+              <img src="Rectangle 3.png" alt="" class="w-100" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container text-center" style="height: 100vh">
+        <div class="row pt-5">
+          <div class="col-md">
+            <h2 class="fw-bold text-center">
+              Kenapa Harus <br /><span class="text-center"
+                >SMK Setia Bhakti</span
+              ><br />
+              Bandung?
+            </h2>
+            <p class="mt-5">
+              Alasan kenapa harus memilih untuk bergabung dengan <br />
+              <span>SMK Setia Bhakti Bandung.</span>
+            </p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row mt-5 gap-5 d-flex justify-content-center">
+            <div
+              class="col-3 pt-5"
+              style="width: 239px; height: 284px"
+            >
+              <img
+                src="computer 1 (1).png"
+                alt=""
+                style="height: 60px; width: 60px"
+              />
+              <h3 class="pt-5">Fasilitas Lengkap</h3>
+              <p class="mt-3">Penunjang belajar dengan kualitas terbaik</p>
+            </div>
+            <div
+              class="col-3 pt-5"
+              style="width: 239px; height: 284px"
+            >
+              <img
+                src="computer 1 (1).png"
+                alt=""
+                style="height: 60px; width: 60px"
+              />
+              <h3 class="pt-5">Fasilitas Lengkap</h3>
+              <p class="mt-3">Penunjang belajar dengan kualitas terbaik</p>
+            </div>
+            <div
+              class="col-3 pt-5"
+              style="width: 239px; height: 284px"
+            >
+              <img
+                src="computer 1 (1).png"
+                alt=""
+                style="height: 60px; width: 60px"
+              />
+              <h3 class="pt-5">Fasilitas Lengkap</h3>
+              <p class="mt-3">Penunjang belajar dengan kualitas terbaik</p>
+            </div>
+            <div
+              class="col-3 pt-5"
+              style="width: 239px; height: 284px"
+            >
+              <img
+                src="computer 1 (1).png"
+                alt=""
+                style="height: 60px; width: 60px"
+              />
+              <h3 class="pt-5">Fasilitas Lengkap</h3>
+              <p class="mt-3">Penunjang belajar dengan kualitas terbaik</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md">
+            <h2 class="text-center mt-5">
+              Profil <br /><span class="text-center"> SMK Setia Bhakti</span>
+              <br />Bandung
+            </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="Rectangle 13.png"
+              alt=""
+              class="mt-5"
+              style="width: 550px; height: 408px"
+            />
+          </div>
+          <div class="col-6">
+            <p class="mt-5 fw-bold" style="font-size: 32px">
+              Sembutan Kepala Sekolah SMK Setia Bhakti Bandung
+            </p>
+            <p class="mt-5" style="font-size: 18px;">
+              sekolah adalah tempat mencetak penerus bangsa yang berkualitas dan
+              berprestasi di segala bidang yang dapat bersaing di dunia
+              internasional
+            </p>
+            <p style="font-size: 18px;">
+              dan Sekolah adalah tempat anak-anak mendapatkan dukungan untuk
+              melengkapi pembelajarannya di sekola
+            </p>
+            <button type="button" class="btn btn-primary mt-5" style="height: 50px;">Baca Selanjut nya....</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container mt-5 pt-5">
+        <div class="row">
+          <div class="col-md text-center">
+            <h2>Jurusan Di <br> <span class="text-center">
+SMK Setia Bhakti  </span><br>
+Bandung</h2>
+              <p class="mt-4">Pilihan program keahlian di SMK Setia Bhakti Bandung.</p>
+          </div>
+          <div class="row d-flex justify-content-center gap-4 mt-5">
+            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+              <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
+              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Rekayasa Perangkat <br>Lunak</p> 
+              <p class="text-light">detail</p>
+            </div>
+            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+              <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
+              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">keperawatan</p> 
+              <p class="text-light">detail</p>
+            </div>
+            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+              <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
+              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Manajemen Perkantoran</p> 
+              <p class="text-light">detail</p>
+            </div>
+            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+              <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
+              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Farmasi</p> 
+              <p class="text-light">detail</p>
+            </div>
+            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+              <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
+              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Akuntansi</p> 
+              <p class="text-light">detail</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md">
+            <h2 class="text-center mt-5 fw-bold">Ekstrakulikuler Di <br> <span class="text-center">
+SMK Setia Bhakti</span> <br> Bandung</h2>
+<p class="text-center mt-5">Pilihan Ekstrakulikuler di SMK Setia Bhakti Bandung.</p>
+          </div>
+        </div>
+        <div class="row mt-5 mb-5">
+          <div class="col-3">
+            <div class="box rounded" style="width: 250px; height: 260px; border: 1px solid gray; border-radius: 10px;">
+              <img src="pramuka-logohd-38028 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
+           <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Praja Muda <br> Karana</p>
+           <p class="ms-3">Pertama kali dibentuk team tahun 2002</p>
+           <p class="ms-3">detail</p>
+            </div>
+          </div>
+           <div class="col-3">
+            <div class="box rounded" style="width: 250px; height: 260px; border: 1px solid gray; border-radius: 10px;">
+              <img src="Pmi 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
+           <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Palang Merah <br> remaja</p>
+           <p class="ms-3">Pertama kali dibentuk team tahun 2002</p>
+           <p class="ms-3">detail</p>
+            </div>
+          </div>
+           <div class="col-3">
+            <div class="box rounded" style="width: 250px; height: 260px;  border: 1px solid gray; border-radius: 10px;">
+              <img src="—Pngtree—mountain nature logo design template_3554547 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
+           <p class="fw-bold ms-3 mt-3" style="font-size: 24px;">Pencinta Alam</p>
+           <p class="ms-3 mt-5">Pertama kali dibentuk team tahun 2002</p>
+           <p class="ms-3">detail</p>
+            </div>
+          </div>
+           <div class="col-3">
+            <div class="box rounded" style="width: 250px; height: 260px; border: 1px solid gray; border-radius: 10px;">
+              <img src="kisspng-cinematography-film-cinematography-5b35aa2fac5b04 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
+           <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Sinematografi</p>
+           <p class="ms-3 mt-5">Pertama kali dibentuk team tahun 2002</p>
+           <p class="ms-3">detail</p>
             </div>
           </div>
         </div>
