--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md">
-            <h2 class="text-center mt-5">
+            <h2 class="text-center mt-5" style="font-size: 40px; font-weight: 700;">
               Profil <br /><span class="text-center"> SMK Setia Bhakti</span>
               <br />Bandung
             </h2>
@@ -332,7 +332,7 @@
             />
           </div>
           <div class="col-6">
-            <p class="mt-5 fw-bold" style="font-size: 32px">
+            <p class="mt-5" style="font-size: 32px; font-weight: 700;">
               Sembutan Kepala Sekolah SMK Setia Bhakti Bandung
             </p>
             <p class="mt-5" style="font-size: 18px;">
@@ -356,33 +356,33 @@
             <h2>Jurusan Di <br> <span class="text-center">
 SMK Setia Bhakti  </span><br>
 Bandung</h2>
-              <p class="mt-4">Pilihan program keahlian di SMK Setia Bhakti Bandung.</p>
+              <p class="mt-2">Pilihan program keahlian di SMK Setia Bhakti Bandung.</p>
           </div>
           <div class="row d-flex justify-content-center gap-4 mt-5">
-            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+            <div class="col-4 rounded border border-secondary" style="width: 292px; height: 219px;">
               <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
-              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Rekayasa Perangkat <br>Lunak</p> 
-              <p class="text-light">detail</p>
+              <p class="fw-bold mt-5" style="font-size: 18px;">Rekayasa Perangkat <br>Lunak</p> 
+              <p>detail</p>
             </div>
-            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+            <div class="col-4 rounded border border-secondary" style="width: 292px; height: 219px;">
               <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
-              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">keperawatan</p> 
-              <p class="text-light">detail</p>
+              <p class="fw-bold mt-5" style="font-size: 18px;">keperawatan</p> 
+              <p>detail</p>
             </div>
-            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+            <div class="col-4 rounded border border-secondary" style="width: 292px; height: 219px;">
               <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
-              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Manajemen Perkantoran</p> 
-              <p class="text-light">detail</p>
+              <p class="fw-bold mt-5" style="font-size: 18px;">Manajemen Perkantoran</p> 
+              <p>detail</p>
             </div>
-            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+            <div class="col-4 rounded border border-secondary" style="width: 292px; height: 219px;">
               <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
-              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Farmasi</p> 
-              <p class="text-light">detail</p>
+              <p class="fw-bold mt-5" style="font-size: 18px;">Farmasi</p> 
+              <p>detail</p>
             </div>
-            <div class="col-4 bg-primary rounded" style="width: 292px; height: 219px;">
+            <div class="col-4 rounded border border-secondary" style="width: 292px; height: 219px;">
               <img src="computer 1 (1).png" alt="" style="width: 45px; height: 34px;" class="mt-4">
-              <p class="fw-bold mt-5 text-light" style="font-size: 18px;">Akuntansi</p> 
-              <p class="text-light">detail</p>
+              <p class="fw-bold mt-5" style="font-size: 18px;">Akuntansi</p> 
+              <p>detail</p>
             </div>
           </div>
         </div>
@@ -404,7 +404,7 @@ SMK Setia Bhakti</span> <br> Bandung</h2>
               <img src="pramuka-logohd-38028 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
            <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Praja Muda <br> Karana</p>
            <p class="ms-3">Pertama kali dibentuk team tahun 2002</p>
-           <p class="ms-3">detail</p>
+              <a class="ms-3 mt-3 text-decoration-none" href="">detail</a>
             </div>
           </div>
            <div class="col-3">
@@ -412,15 +412,15 @@ SMK Setia Bhakti</span> <br> Bandung</h2>
               <img src="Pmi 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
            <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Palang Merah <br> remaja</p>
            <p class="ms-3">Pertama kali dibentuk team tahun 2002</p>
-           <p class="ms-3">detail</p>
+              <a class="ms-3 mt-3 text-decoration-none" href="">detail</a>
             </div>
           </div>
            <div class="col-3">
             <div class="box rounded" style="width: 250px; height: 260px;  border: 1px solid gray; border-radius: 10px;">
               <img src="—Pngtree—mountain nature logo design template_3554547 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
-           <p class="fw-bold ms-3 mt-3" style="font-size: 24px;">Pencinta Alam</p>
+           <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Pencinta Alam</p>
            <p class="ms-3 mt-5">Pertama kali dibentuk team tahun 2002</p>
-           <p class="ms-3">detail</p>
+              <a class="ms-3 mt-3 text-decoration-none" href="">detail</a>
             </div>
           </div>
            <div class="col-3">
@@ -428,8 +428,96 @@ SMK Setia Bhakti</span> <br> Bandung</h2>
               <img src="kisspng-cinematography-film-cinematography-5b35aa2fac5b04 1.png" alt="" class="mt-3 ms-3" style="width: 54px; height: 54px;">
            <p class="fw-bold ms-3 mt-2" style="font-size: 24px;">Sinematografi</p>
            <p class="ms-3 mt-5">Pertama kali dibentuk team tahun 2002</p>
-           <p class="ms-3">detail</p>
+                <a class="ms-3 mt-3 text-decoration-none" href="">detail</a>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section>
+      <div class="container b">
+        <div class="row">
+          <h2 class="fw-bold text-center mt-5">Berita Terbaru <span>Di SMK <br> SETIA BHAKTI</span> Bandung</h1>
+        </div>
+        <div class="row">
+          <div class="col-3 mb-4 mt-4">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3 mb-4 mt-4">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3 mb-4 mt-4">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3 mb-4 mt-4">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="cardb" style="width: 250px; height: 332px ; border-radius: 10px;">
+            <img src="Rectangle 48.png" alt="" style="width: 250px; height: 158px;">
+              <p style="font-size: 10px; font-weight: 500; color: gray; margin-top: 10px; margin-left: 10px;">13 December 2023 </p>
+              <h2 style="font-size: 16px; font-weight: 700; margin-left: 10px;">Pendaftaran SMK Setia Bhakti Bandung Telah Dibuka !</h2>
+              <a style="font-size: 10px; font-weight: 600; text-decoration: none; margin-top: 20px; margin-left: 10px;" href="">Baca Selengkapnya</a>
+              </div>
+          </div>
+        </div>
+        <div class="row">
+          <button class="text-center mt-4 mx-auto" style="width: 212px; height: 62px; background-color: blue; color: aliceblue; border: none; border-radius: 50px;"> Semua Berita</button>
+        </div>
+      </div>
+
+    </section>
+
+    <section>
+      <div class="container bg-primary mt-3">
+        <div class="row">
+          <div class="col text-center">
+            <p style="font-size: 40px; font-weight:700; margin-top: 20px; color: aliceblue;">Foto Documentasi Kegiatan <br>SMK Setia Bhakti Bandung</p>
           </div>
         </div>
       </div>
